Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12118

Refactoring C++: Creator adds additional whitespaces at last statement

XMLWordPrintable

      Steps to reproduce:

      • create Plain C++ project
      • add a simple if/if-else/do-while/while block e.g.
        int dummy = 0;
        if (dummy < 10)
            ++dummy;
        
      • mark the first keyword (if, do, while)
      • right click on it and invoke 'Refactor' -> 'Extract Function', give it a name and hit 'OK'
      • check the last line of the function

      Current result:

      • last line has 4 additional whitespaces

      Expected result:

      • no additional whitespaces if they where not inside the original code

        For Gerrit Dashboard: QTCREATORBUG-12118
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes